Include navitagion menu directive and styles.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<nav>
-  {{ title }}
-    <ul>
-        <li><a routerLink="/users">Users</a></li>
-    </ul>      
-</nav>
+<app-nav></app-nav>
 <main>
     <router-outlet></router-outlet>
 </main>
