--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div>
+  <h1>Welcome to Atcapa!</h1>
+  <p>here u can keep an eye on your employees working hours</p>
+</div>
