--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,19 @@
-<p>
-  users works!
-</p>
+<h1>Users</h1>
+<p>Here you can overview some information about the users in you company.</p>
+
+<table>
+  <thead>
+    <tr>
+      <td>Employee Id</td>
+      <td>Employee Email</td>
+      <td>Employee Name</td>
+    </tr>
+  </thead>
+  <tbody *ngIf="employees">
+    <tr *ngFor="let employee of employees">
+      <td>{{employee.id }}</td>
+      <td>{{employee.full_name }}</td>
+      <td>{{employee.email }}</td>
+    </tr>
+  </tbody>
+</table>
