--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,8 +1,8 @@
 <h1>Users</h1>
 <p>Here you can overview some information about the users in you company.</p>
 
-<table>
-  <thead>
+<table class="table table-striped">
+  <thead class="thead-dark">
     <tr>
       <td>Employee Id</td>
       <td>Employee Email</td>
