--- a/src/app/weekly-overview/weekly-overview.component.html
+++ b/src/app/weekly-overview/weekly-overview.component.html
@@ -1,3 +1,33 @@
-<p>
-  weekly-overview works!
-</p>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#monday" role="tab" aria-controls="monday" aria-selected="true">Monday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#tuesday" role="tab" aria-controls="tuesday" aria-selected="false">Tuesday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="wednesday-tab" data-toggle="tab" href="#wednesday" role="tab" aria-controls="wednesday" aria-selected="false">Wednesday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="thursday-tab" data-toggle="tab" href="#thursday" role="tab" aria-controls="thursday" aria-selected="false">Thursday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="friday-tab" data-toggle="tab" href="#friday" role="tab" aria-controls="friday" aria-selected="false">Friday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="saturday-tab" data-toggle="tab" href="#saturday" role="tab" aria-controls="saturday" aria-selected="false">Saturday</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="sunday-tab" data-toggle="tab" href="#sunday" role="tab" aria-controls="sunday" aria-selected="false">Sunday</a>
+  </li>
+</ul>
+
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="monday" role="tabpanel" aria-labelledby="monday-tab">Monday</div>
+  <div class="tab-pane fade" id="tuesday" role="tabpanel" aria-labelledby="tuesday-tab">Tuesday</div>
+  <div class="tab-pane fade" id="wednesday" role="tabpanel" aria-labelledby="wednesday-tab">Wednesday</div>
+  <div class="tab-pane fade" id="thursday" role="tabpanel" aria-labelledby="thursday-tab">Thursday</div>
+  <div class="tab-pane fade" id="friday" role="tabpanel" aria-labelledby="friday-tab">Friday</div>
+  <div class="tab-pane fade" id="saturday" role="tabpanel" aria-labelledby="saturday-tab">Saturday</div>
+  <div class="tab-pane fade" id="sunday" role="tabpanel" aria-labelledby="sunday-tab">Sunday</div>
+</div>
