--- a/src/app/weekly-overview/weekly-overview.component.html
+++ b/src/app/weekly-overview/weekly-overview.component.html
@@ -23,11 +23,138 @@
 </ul>
 
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="monday" role="tabpanel" aria-labelledby="monday-tab">Monday</div>
-  <div class="tab-pane fade" id="tuesday" role="tabpanel" aria-labelledby="tuesday-tab">Tuesday</div>
-  <div class="tab-pane fade" id="wednesday" role="tabpanel" aria-labelledby="wednesday-tab">Wednesday</div>
-  <div class="tab-pane fade" id="thursday" role="tabpanel" aria-labelledby="thursday-tab">Thursday</div>
-  <div class="tab-pane fade" id="friday" role="tabpanel" aria-labelledby="friday-tab">Friday</div>
-  <div class="tab-pane fade" id="saturday" role="tabpanel" aria-labelledby="saturday-tab">Saturday</div>
-  <div class="tab-pane fade" id="sunday" role="tabpanel" aria-labelledby="sunday-tab">Sunday</div>
+  <div class="tab-pane fade show active" id="monday" role="tabpanel" aria-labelledby="monday-tab">Monday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="mondayEntries">
+        <tr *ngFor="let entry of mondayEntries">
+          <td>{{entry.user.full_name }}</td>
+          <td>{{entry.sum / 3600 }}</td>
+          <td>{{entry.time_entry_type.name }}</td>
+          <td>{{entry.project.full_name}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="tuesday" role="tabpanel" aria-labelledby="tuesday-tab">Tuesday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="wednesday" role="tabpanel" aria-labelledby="wednesday-tab">Wednesday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="thursday" role="tabpanel" aria-labelledby="thursday-tab">Thursday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="friday" role="tabpanel" aria-labelledby="friday-tab">Friday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="saturday" role="tabpanel" aria-labelledby="saturday-tab">Saturday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+          <td>Name</td>
+          <td>Hours</td>
+          <td>Hours Type</td>
+          <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="sunday" role="tabpanel" aria-labelledby="sunday-tab">Sunday
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <td>Name</td>
+            <td>Hours</td>
+            <td>Hours Type</td>
+            <td>Project</td>
+        </tr>
+      </thead>
+      <tbody *ngIf="employees">
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id }}</td>
+          <td>{{employee.full_name }}</td>
+          <td>{{employee.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
