Rework no records table layout.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
     <i class="fas fa-bars" appNavitagion></i>
-      <h1>Atcapa</h1>     
+      <h1>Atcapa<i class="fas fa-user profile"></i> </h1>     
       <ul id="navigation">
             <li><i class="fa fa-users" aria-hidden="true"></i>
                 <a routerLink="/users">Users</a></li>
@@ -8,6 +8,6 @@
                 <a routerLink="/weeklyOverview">Weekly Overview</a></li>
             <li><a href="#">link 3</a></li>
             <li><a href="#">link 4</a></li>
-      </ul> 
+      </ul>
 </nav>
 
