--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -7,6 +7,7 @@ nav {
     padding: 7px 15px 7px 31px;
     color: white;
     height: 50px;
+    z-index: 10000;
 }
 
 nav > i {
@@ -17,6 +18,7 @@ nav > i {
 }
 
 nav > h1 {
+    width: 92%;
     display: inline-block;
     font-size: 29px;
 }
@@ -42,5 +44,24 @@ nav > h1 {
 
 #navigation > li > i {
     margin-right: 9px;
+    transition: all 0.75s ease;
 }
 
+#navigation > li > a {
+    transition: all 0.75s ease;
+}
+
+#navigation > li > a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+h1 > i.profile {
+    cursor: pointer;
+    float: right;
+    transition: all 0.75s ease;
+}
+
+h1 > i.profile:hover {
+    color: black;
+}
