Fix bate format for tables.

--- a/src/app/weekly-overview/weekly-overview.component.html
+++ b/src/app/weekly-overview/weekly-overview.component.html
@@ -55,7 +55,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -78,7 +78,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -101,7 +101,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -124,7 +124,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -147,7 +147,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -170,7 +170,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
@@ -193,7 +193,7 @@
           <td>{{entry.sum / 3600 }}</td>
           <td>{{entry.time_entry_type.name }}</td>
           <td>{{entry.project.full_name}}</td>
-          <td>{{entry.date}}</td>
+          <td>{{entry.date.month}}/{{entry.date.day}}/{{entry.date.year}}</td>
         </tr>
       </tbody>
     </table>
